--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,9 +28,11 @@ Imports:
     seqinr,
     stringr,
     tibble,
-    tidyr
+    tidyr,
+    vctrs
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
