--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ export(choose_clusters)
 export(compute_q2)
 export(cv_model_select_pyNMF)
 export(generate_folds)
+export(get_best_K)
 export(get_best_alpha)
-export(get_best_k)
 export(get_clusters)
 export(get_q2_aggregates_chosen_var)
-export(get_q2_threshold_by_k)
+export(get_q2_threshold_by_K)
 export(get_q2_using_py)
 export(make_sinuc_PWMs)
 export(plot_arch_for_clusters)
@@ -18,6 +18,8 @@ export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(prepare_data_from_FASTA)
 export(represent_matrix_of_acgt)
+export(sparsify_mat)
+export(viz_all_factors_as_heatmap)
 export(viz_all_factors_as_seqlogo)
 export(viz_all_factors_in_combined_heatmaps_seqlogos)
 import(ggplot2)
