--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,25 @@ export(viz_all_factors_as_seqlogo)
 export(viz_all_factors_in_combined_heatmaps_seqlogos)
 import(ggplot2)
 import(ggseqlogo)
+import(gridExtra)
+importFrom(cluster,silhouette)
+importFrom(cvTools,cvFolds)
 importFrom(dplyr,mutate)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
 importFrom(magrittr,"%>%")
+importFrom(parallel,clusterEvalQ)
+importFrom(parallel,clusterExport)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
 importFrom(purrr,cross_df)
 importFrom(reshape2,melt)
+importFrom(stats,aggregate)
+importFrom(stats,cutree)
+importFrom(stats,dist)
+importFrom(stats,hclust)
+importFrom(stats,kmeans)
+importFrom(stats,quantile)
+importFrom(stats,sd)
