--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,41 +1,46 @@
-Package: archR
 Type: Package
+Package: archR
 Title: Identify Different Architectures of Sequence Elements
-Version: 0.0.0.9002
-Authors@R: person("Nikumbh", "Sarvesh", email = "sarvesh.nikumbh@gmail.com",
-  role = c("aut", "cre"))
+Version: 0.0.0.9003
+Authors@R: 
+    person(given = "Nikumbh",
+           family = "Sarvesh",
+           role = c("aut", "cre"),
+           email = "sarvesh.nikumbh@gmail.com")
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: GPL-3
+Depends:
+    R (>= 3.1)
+Imports:
+    BBmisc (>= 1.11),
+    cluster,
+    cvTools (>= 0.3.2),
+    dplyr (>= 0.8.0.1),
+    ggplot2 (>= 3.1.1),
+    ggseqlogo (>= 0.1),
+    gridExtra (>= 2.3),
+    heatmap3 (>= 1.1.6),
+    magrittr (>= 1.5),
+    MASS,
+    pkgmaker (>= 0.27),
+    purrr (>= 0.3.2),
+    RColorBrewer (>= 1.1.2),
+    readr (>= 1.3.1),
+    reshape2 (>= 1.4.3),
+    reticulate (>= 1.12),
+    seqinr (>= 3.4.5),
+    stringr (>= 1.4.0),
+    tibble (>= 2.1.1),
+    tidyr (>= 0.8.3),
+    vctrs (>= 0.1.0)
+Suggests: 
+    knitr (>= 1.22),
+    rmarkdown (>= 1.12),
+    testthat (>= 2.1.1),
+    covr
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 LazyData: true
-Depends:
-    R (>= 2.10)
-Imports:
-    BBmisc,
-    cluster,
-    cvTools,
-    dplyr,
-    ggplot2,
-    ggseqlogo,
-    heatmap3,
-    MASS,
-    pkgmaker,
-    purrr,
-    RColorBrewer,
-    readr,
-    reticulate,
-    reshape2,
-    seqinr,
-    stringr,
-    tibble,
-    tidyr,
-    vctrs,
-    magrittr,
-    gridExtra
 RoxygenNote: 6.1.1
-Suggests: 
-    knitr,
-    rmarkdown,
-    testthat
-VignetteBuilder: knitr
