system requirements filed added for scikit-learn and python

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Authors@R:
 Description: Given a set of DNA sequences, the \code{archR} package enables 
     discovery of clusters of sequence with characteristic sequence architectures.
 License: GPL-3
+SystemRequirements: Python (>= 3.5), Scikit-learn (>= 0.21.2)
 Depends:
     R (>= 3.1)
 Imports:
