travis-ci config update/edit

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,22 @@
 language: R
 cache: packages
 
-matrix:
-  include:
-  - r: devel
-  - r: release
-    after_success:
-    - Rscript -e 'covr::codecov()'
-  - r: oldrel
-  - r: 3.3
-  - r: 3.2
-  - r: 3.1
+
+r:3.6.0
+
+bioc_packages:
+  - hopach
+  - BiocGenerics
+os:
+  - linux
+  - osx
+#matrix:
+#  include:
+#  - r: devel
+#  - r: release
+#    after_success:
+#    - Rscript -e 'covr::codecov()'
+#  - r: oldrel
+#  - r: 3.3
+#  - r: 3.2
+#  - r: 3.1
