[WIP]resolving issues with global variable binding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ import(ggplot2)
 import(ggseqlogo)
 import(gridExtra)
 importFrom(BiocGenerics,rowMeans)
+importFrom(MASS,ginv)
 importFrom(cluster,silhouette)
 importFrom(cvTools,cvFolds)
 importFrom(dplyr,mutate)
