--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,29 @@ language: R
 cache: packages
 
 
-r: 3.6.0
+r: 3.5.0
 
-bioc_packages:
-  - hopach
-  - BiocGenerics
 os:
   - linux
-  - osx
-#matrix:
-#  include:
-#  - r: devel
-#  - r: release
-#    after_success:
-#    - Rscript -e 'covr::codecov()'
-#  - r: oldrel
-#  - r: 3.3
-#  - r: 3.2
-#  - r: 3.1
+
+env:
+  global:
+    - R_CHECK_ARGS="--build-vignettes --no-manual"
+
+install:
+  ## For installing all CRAN dependencies using rpack's DESCRIPTION
+  - ./travis-tool.sh install_deps
+  
+  ## For installing all Bioconductor dependencies using rpack's DESCRIPTION
+  - ./travis-tool.sh install_bioc_deps
+
+after_script:
+  - ./travis-tool.sh dump_logs_by_extension "timings"
+  - ./travis-tool.sh dump_sysinfo
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
+
+
