--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-cache: packages
+language: r
+r: bioc-devel
 
+cache:
+  packages: true
 
 r: 3.5.0
 
