--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,10 @@ os:
 
 env:
   global:
-    - R_CHECK_ARGS="--build-vignettes --no-manual"
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual"
 
 install:
-  ## For installing all CRAN dependencies using rpack's DESCRIPTION
   - ./travis-tool.sh install_deps
-  
-  ## For installing all Bioconductor dependencies using rpack's DESCRIPTION
   - ./travis-tool.sh install_bioc_deps
 
 after_script:
