--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,23 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
-r: bioc-devel
-
 cache:
   packages: true
-
 r: 3.5.0
-
 os:
-  - linux
+    - linux
+bioc_packages:
+    - BiocCheck
 
-env:
-  global:
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual"
+before_install:
+  Rscript -e 'BiocManager::install("hopach", "BiocGenerics", update = TRUE)'
 
-install:
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_bioc_deps
+warnings_are_errors: true
 
-after_script:
-  - ./travis-tool.sh dump_logs_by_extension "timings"
-  - ./travis-tool.sh dump_sysinfo
+script:
+    - R CMD build . --no-build-vignettes --no-manual
+    - R CMD check *tar.gz --as-cran --timings --no-manual
+    - R CMD BiocCheck *tar.gz
 
 notifications:
   email:
