--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Authors@R:
            role = c("aut", "cre"),
            email = "sarvesh.nikumbh@gmail.com")
 Description: Given a set of DNA sequences, the \code{archR} package enables 
-    discovery of clusters of sequence with characteristic sequence architectures.
+    discovery of clusters of sequence with characteristic sequence 
+    architectures.
 License: GPL-3
 SystemRequirements: Python (>= 3.5), Scikit-learn (>= 0.21.2)
 Depends:
