--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(archR)
 export(archRSetConfig)
 export(collect_cluster_labels)
+export(get_one_hot_encoded_seqs)
 export(make_sinuc_PWMs)
 export(plot_arch_for_clusters)
 export(plot_ggheatmap)
@@ -17,6 +18,8 @@ import(ggplot2)
 import(ggseqlogo)
 import(gridExtra)
 importFrom(BiocGenerics,rowMeans)
+importFrom(Biostrings,DNAStringSet)
+importFrom(Biostrings,width)
 importFrom(MASS,ginv)
 importFrom(cvTools,cvFolds)
 importFrom(dplyr,mutate)
