minor improvements based on running CMD Checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ Depends:
     R (>= 3.5)
 Imports:
     BBmisc (>= 1.11),
-    cluster,
     cvTools (>= 0.3.2),
     dplyr (>= 0.8.0.1),
     ggplot2 (>= 3.1.1),
@@ -30,15 +29,15 @@ Imports:
     rlang,
     matrixStats,
     scales,
+    grDevices,
+    stats,
     assertthat,
     data.table,
     purrr (>= 0.3.2),
-    RColorBrewer (>= 1.1.2),
     reshape2 (>= 1.4.3),
     reticulate (>= 1.12),
     tibble (>= 2.1.1),
-    tidyr (>= 0.8.3),
-    vctrs (>= 0.1.0),
+    parallel,
     ggpubr (>= 0.2.3),
     hopach (>= 2.42.0),
     BiocGenerics,
