acgt-matrix visualization in a new file; internal functions edited to have a dot and remvoed from man pages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(prepare_data_from_FASTA)
 export(represent_matrix_of_acgt_with_ggplot2)
+export(visualize_matrix_of_acgt)
 export(viz_all_factors_as_heatmap)
 export(viz_all_factors_as_seqlogo)
 export(viz_all_factors_in_combined_heatmaps_seqlogos)
@@ -17,7 +18,6 @@ import(ggseqlogo)
 import(gridExtra)
 importFrom(BiocGenerics,rowMeans)
 importFrom(Biostrings,DNAStringSet)
-importFrom(Biostrings,width)
 importFrom(MASS,ginv)
 importFrom(cvTools,cvFolds)
 importFrom(dplyr,mutate)
