cleaned and renamed functions; corresponding changes in man, tests and vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,36 +8,21 @@ export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(prepare_data_from_FASTA)
-export(visualize_matrix_of_acgt)
-export(viz_all_factors_as_heatmap)
-export(viz_all_factors_as_seqlogo)
-export(viz_all_factors_in_combined_heatmaps_seqlogos)
+export(viz_basis_vectors_as_heatmap)
+export(viz_basis_vectors_as_seqlogo)
+export(viz_basis_vectors_in_combined_heatmaps_seqlogos)
+export(viz_matrix_of_acgt)
 import(ggplot2)
 import(ggseqlogo)
 import(gridExtra)
 importFrom(BiocGenerics,rowMeans)
 importFrom(Biostrings,DNAStringSet)
-importFrom(MASS,ginv)
-importFrom(cvTools,cvFolds)
 importFrom(dplyr,mutate)
-importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
-importFrom(grDevices,rgb)
-importFrom(magrittr,"%>%")
-importFrom(parallel,clusterEvalQ)
-importFrom(parallel,clusterExport)
-importFrom(parallel,detectCores)
-importFrom(parallel,makeCluster)
-importFrom(parallel,stopCluster)
-importFrom(purrr,cross_df)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
-importFrom(stats,aggregate)
-importFrom(stats,dist)
-importFrom(stats,hclust)
-importFrom(stats,kmeans)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(tibble,add_column)
