--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,20 +22,16 @@ Imports:
     dplyr (>= 0.8.0.1),
     ggplot2 (>= 3.1.1),
     ggseqlogo (>= 0.1),
-    gridExtra (>= 2.3),
-    MASS,
     rlang,
-    matrixStats,
+    MASS,
     scales,
     grDevices,
     stats,
-    assertthat,
     data.table,
     purrr (>= 0.3.2),
     reshape2 (>= 1.4.3),
     reticulate (>= 1.12),
     tibble (>= 2.1.1),
-    parallel,
     ggpubr (>= 0.2.3),
     hopach (>= 2.42.0),
     BiocGenerics,
@@ -46,6 +42,8 @@ Suggests:
     testthat (>= 2.1.1),
     covr,
     vdiffr (>= 0.3.0)
+Enhances:
+    parallel
 VignetteBuilder: 
     knitr
 biocViews: 
