archRtodo3 DONE; new function to get_seq_clusters as list; archRresult has additional field reporting reordered clusetering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(stats,dist)
+importFrom(stats,hclust)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(tibble,add_column)
