exported function to get clusters as a list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(archR)
 export(archRSetConfig)
 export(collect_cluster_labels)
 export(get_one_hot_encoded_seqs)
+export(get_seqs_clusters_in_a_list)
 export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
