--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(prepare_data_from_FASTA)
+export(reorder_archRresult)
 export(viz_basis_vectors_as_heatmap)
 export(viz_basis_vectors_as_seqlogo)
 export(viz_basis_vectors_in_combined_heatmaps_seqlogos)
