--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     dplyr (>= 0.8.0.1),
     ggplot2 (>= 3.1.1),
     ggseqlogo (>= 0.1),
+    TFBSTools,
     rlang,
     MASS,
     scales,
@@ -34,9 +35,11 @@ Imports:
     tibble (>= 2.1.1),
     ggpubr (>= 0.2.3),
     hopach (>= 2.42.0),
+    shiny,
     BiocGenerics,
     Biostrings
-Suggests: 
+Suggests:
+    rslurm,
     knitr (>= 1.22),
     rmarkdown (>= 1.12),
     testthat (>= 2.1.1),
