--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Type: Package
-Package: archR
+Package: seqarchR
 Title: Identify Different Architectures of Sequence Elements
-Version: 0.99.3
+Version: 0.99.4
 Authors@R: 
     person(given = "Sarvesh",
            family = "Nikumbh",
            role = c("aut", "cre"),
            email = "sarvesh.nikumbh@gmail.com")
-Description: Given a set of DNA sequences, the \code{archR} package enables 
+Description: Given a set of DNA sequences, the \code{seqarchR} package enables 
     discovery of clusters of sequence with characteristic sequence 
     architectures.
 License: GPL-3
-URL: https://github.com/snikumbh/archR
-BugReports: https://github.com/snikumbh/archR/issues
+URL: https://github.com/snikumbh/seqarchR
+BugReports: https://github.com/snikumbh/seqarchR/issues
 SystemRequirements: Python (>= 3.5), scikit-learn (>= 0.21.2)
 Depends:
     R (>= 3.5)
@@ -35,10 +35,10 @@ Imports:
     tibble (>= 2.1.1),
     ggpubr (>= 0.2.3),
     hopach (>= 2.42.0),
-    shiny,
     BiocGenerics,
     Biostrings
 Suggests:
+    shiny,
     rslurm,
     knitr (>= 1.22),
     rmarkdown (>= 1.12),
