--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(archR)
 export(archRSetConfig)
+export(archR_slurm_call)
 export(collect_cluster_labels)
 export(get_one_hot_encoded_seqs)
 export(get_seqs_clusters_in_a_list)
@@ -10,17 +11,24 @@ export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(prepare_data_from_FASTA)
 export(reorder_archRresult)
+export(runArchRUI)
 export(viz_basis_vectors_as_heatmap)
 export(viz_basis_vectors_as_seqlogo)
 export(viz_basis_vectors_in_combined_heatmaps_seqlogos)
 export(viz_matrix_of_acgt)
+export(viz_matrix_of_acgt_image)
 import(ggplot2)
 import(ggseqlogo)
 importFrom(BiocGenerics,rowMeans)
 importFrom(Biostrings,DNAStringSet)
+importFrom(Biostrings,width)
+importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(parallel,makeCluster)
+importFrom(parallel,setDefaultCluster)
+importFrom(parallel,stopCluster)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(stats,dist)
