--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Type: Package
-Package: seqarchR
+Package: archR
 Title: Identify Different Architectures of Sequence Elements
 Version: 0.99.4
 Authors@R: 
@@ -7,12 +7,12 @@ Authors@R:
            family = "Nikumbh",
            role = c("aut", "cre"),
            email = "sarvesh.nikumbh@gmail.com")
-Description: Given a set of DNA sequences, the \code{seqarchR} package enables 
+Description: Given a set of DNA sequences, the \code{archR} package enables 
     discovery of clusters of sequence with characteristic sequence 
     architectures.
 License: GPL-3
-URL: https://github.com/snikumbh/seqarchR
-BugReports: https://github.com/snikumbh/seqarchR/issues
+URL: https://github.com/snikumbh/archR
+BugReports: https://github.com/snikumbh/archR/issues
 SystemRequirements: Python (>= 3.5), scikit-learn (>= 0.21.2)
 Depends:
     R (>= 3.5)
