--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(archR_slurm_call)
 export(collect_cluster_labels)
 export(get_one_hot_encoded_seqs)
 export(get_seqs_clusters_in_a_list)
+export(handle_dir_creation)
 export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
