changes based on devtools:check, all green except 1 note re staged install [skip travis]

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,11 @@ Imports:
     TFBSTools,
     rlang,
     MASS,
+    NMF,
+    Matrix,
     scales,
     grDevices,
+    methods,
     stats,
     data.table,
     purrr (>= 0.3.2),
@@ -39,7 +42,6 @@ Imports:
     Biostrings
 Suggests:
     shiny,
-    rslurm,
     knitr (>= 1.22),
     rmarkdown (>= 1.12),
     testthat (>= 2.1.1),
