--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 export(archR)
 export(archRSetConfig)
-export(archR_get_job_status)
-export(archR_slurm_call)
 export(collect_cluster_labels)
 export(get_one_hot_encoded_seqs)
 export(get_seqs_clusters_in_a_list)
@@ -12,7 +10,6 @@ export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(prepare_data_from_FASTA)
-export(reorder_archRresult)
 export(runArchRUI)
 export(viz_basis_vectors_as_heatmap)
 export(viz_basis_vectors_as_seqlogo)
@@ -28,14 +25,17 @@ importFrom(Matrix,Matrix)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(grDevices,png)
+importFrom(graphics,axis)
+importFrom(graphics,image)
+importFrom(methods,as)
+importFrom(methods,canCoerce)
+importFrom(methods,is)
 importFrom(parallel,makeCluster)
 importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
-importFrom(stats,dist)
-importFrom(stats,hclust)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(tibble,add_column)
-importFrom(utils,read.table)
