--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(handle_dir_creation)
 export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
+export(plot_ggseqlogo_of_seqs)
 export(prepare_data_from_FASTA)
 export(runArchRUI)
 export(viz_basis_vectors_as_heatmap)
