--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(collect_cluster_labels)
 export(get_one_hot_encoded_seqs)
 export(get_seqs_clusters_in_a_list)
 export(handle_dir_creation)
-export(plot_arch_for_clusters)
+export(plot_arch_for_clusters_new)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(plot_ggseqlogo_of_seqs)
@@ -29,8 +29,6 @@ importFrom(grDevices,pdf)
 importFrom(grDevices,png)
 importFrom(graphics,axis)
 importFrom(graphics,image)
-importFrom(methods,as)
-importFrom(methods,canCoerce)
 importFrom(methods,is)
 importFrom(parallel,makeCluster)
 importFrom(parallel,setDefaultCluster)
