--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Type: Package
 Package: archR
 Title: Identify Different Architectures of Sequence Elements
-Version: 0.99.4
+Version: 0.99.5
 Authors@R: 
     person(given = "Sarvesh",
            family = "Nikumbh",
            role = c("aut", "cre"),
            email = "sarvesh.nikumbh@gmail.com")
-Description: Given a set of DNA sequences, the \code{archR} package enables 
-    discovery of clusters of sequence with characteristic sequence 
+Description: Given a set of DNA sequences, the \code{archR} enables 
+    unsupervised discovery of clusters with characteristic sequence 
     architectures.
 License: GPL-3
 URL: https://github.com/snikumbh/archR
@@ -66,5 +66,4 @@ biocViews:
     FeatureExtraction
 Encoding: UTF-8
 LazyData: false
-StagedInstall: false
 RoxygenNote: 7.1.1
