--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 cache: packages
 
 r: 
-  - 3.5
+  - 3.6
 
 os:
     - linux
@@ -19,6 +19,7 @@ addons:
   apt_packages:
     - libxml2-dev
     - libgsl0-dev
+    - r-cran-xml  
     - python3.5
     - python-numpy
     - python-scipy
