--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ addons:
     - libxml2-dev
     - libgsl0-dev
     - r-cran-xml
-    - ghostsript
+    - ghostscript
     - python3.5
     - python-numpy
     - python-scipy
