--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,8 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   archR: archR.html
-last_built: 2020-09-21T12:28Z
+last_built: 2020-09-21T14:13Z
+urls:
+  reference: http://snikumbh.github.io/archR/reference
+  article: http://snikumbh.github.io/archR/articles
 
