updated func help text and few function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,12 @@ export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(plot_ggseqlogo_of_seqs)
 export(prepare_data_from_FASTA)
-export(runArchRUI)
+export(run_archR_UI)
 export(viz_basis_vectors_as_heatmap)
 export(viz_basis_vectors_as_seqlogo)
 export(viz_basis_vectors_in_combined_heatmaps_seqlogos)
-export(viz_matrix_of_acgt)
-export(viz_matrix_of_acgt_image)
+export(viz_seqs_as_acgt_mat_from_ohe)
+export(viz_seqs_as_acgt_mat_from_seqs)
 import(ggplot2)
 import(ggseqlogo)
 importFrom(Biostrings,DNAStringSet)
