--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -37,12 +37,13 @@ reference:
   - '`plot_ggseqlogo`'
   - '`plot_ggseqlogo_of_seqs`'
   - '`prepare_data_from_FASTA`'
-  - '`runArchRUI`'
+  - '`run_archR_UI`'
   - '`viz_basis_vectors_as_heatmap`'
   - '`viz_basis_vectors_as_seqlogo`'
   - '`viz_basis_vectors_in_combined_heatmaps_seqlogos`'
-  - '`viz_matrix_of_acgt`'
-  - '`viz_matrix_of_acgt_image`'
+  - '`viz_seqs_as_acgt_mat_from_ohe`'
+  - '`viz_seqs_as_acgt_mat_from_seqs`'
+
 
 articles:
 - title: All vignettes
