--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,14 @@ export(archRSetConfig)
 export(get_one_hot_encoded_seqs)
 export(get_seqs_clusters_in_a_list)
 export(handle_dir_creation)
+export(make_dinuc_PWMs)
+export(make_sinuc_PWMs)
 export(plot_arch_for_clusters_new)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(plot_ggseqlogo_of_seqs)
 export(prepare_data_from_FASTA)
+export(reorder_archRresult)
 export(run_archR_UI)
 export(viz_basis_vectors_as_heatmap)
 export(viz_basis_vectors_as_seqlogo)
@@ -33,4 +36,6 @@ importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(stats,dist)
+importFrom(stats,hclust)
 importFrom(tibble,add_column)
