--- a/.github/workflows/check-standard-minimal.yaml
+++ b/.github/workflows/check-standard-minimal.yaml
@@ -3,11 +3,9 @@
 on:
   push:
     branches:
-      - main
       - master
   pull_request:
     branches:
-      - main
       - master
 
 name: R-CMD-check
@@ -22,23 +20,36 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest, r: 'release'}
-          - {os: ubuntu-20.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          - {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          - {os: ubuntu-20.04, r: '3.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
 
     steps:
-      - uses: actions/checkout@v2
+	# 'uses' keyword tells to perform the specified action
+	#
+	# 'actions/' retrives a community action, specifically version v2
+	# this checks out your repo and downloads it to the runner
+      - name: Checkout repo
+	uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@v1
+	# installs R on the runner using the r-lib actions
+      - name: Setup R
+	uses: r-lib/actions/setup-r@v1
         with:
           r-version: ${{ matrix.config.r }}
 
+      - name Install Python
+	runs: |
+	  Rscript -e "install.packages('remotes')"
+          Rscript -e "remotes::install_github('rstudio/reticulate')"
+          Rscript -e "reticulate::install_miniconda()"
+          Rscript -e "reticulate::conda_create('r-reticulate', packages = c('python==3.5', 'python-numpy', 'python-scipy', 'python-sklearn'))"
+
+	# installs/sets up pandoc
       - uses: r-lib/actions/setup-pandoc@v1
+
 
       - name: Query dependencies
         run: |
@@ -47,13 +58,6 @@ jobs:
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
 
-      - name: Cache R packages
-        if: runner.os != 'Windows'
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
       - name: Install system dependencies
         if: runner.os == 'Linux'
@@ -62,6 +66,7 @@ jobs:
           do
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
+
 
       - name: Install dependencies
         run: |
@@ -74,6 +79,7 @@ jobs:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
+
 
       - name: Upload check results
         if: failure()
