fix err runs --> run

--- a/.github/workflows/check-standard-minimal.yaml
+++ b/.github/workflows/check-standard-minimal.yaml
@@ -41,7 +41,7 @@ jobs:
           r-version: ${{ matrix.config.r }}
 
       - name Install Python
-        runs: |
+        run: |
           Rscript -e "install.packages('remotes')"
           Rscript -e "remotes::install_github('rstudio/reticulate')"
           Rscript -e "reticulate::install_miniconda()"
