--- a/.github/workflows/check-standard-minimal.yaml
+++ b/.github/workflows/check-standard-minimal.yaml
@@ -40,7 +40,7 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
 
-      - name Install Python
+      - name: Install Python
         run: |
           Rscript -e "install.packages('remotes')"
           Rscript -e "remotes::install_github('rstudio/reticulate')"
