--- a/.github/workflows/check-standard-minimal.yaml
+++ b/.github/workflows/check-standard-minimal.yaml
@@ -45,7 +45,7 @@ jobs:
           Rscript -e "install.packages('remotes')"
           Rscript -e "remotes::install_github('rstudio/reticulate')"
           Rscript -e "reticulate::install_miniconda()"
-          Rscript -e "reticulate::conda_create('r-reticulate', packages = c('python==3.5', 'numpy', 'scipy', 'scikit-learn'))"
+          Rscript -e "reticulate::conda_create('r-reticulate', packages = c('python=3.5', 'numpy', 'scipy', 'scikit-learn'))"
 
         # installs/sets up pandoc
       - uses: r-lib/actions/setup-pandoc@v1
