--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -61,6 +61,9 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v1
 
+      - name: Install system libraries
+        run: sudo apt-get install libnlopt-dev ghostscript libcurl4-openssl-dev libgsl0-dev -f
+
       - name: Cache R packages
         uses: actions/cache@v2
         with:
@@ -77,9 +80,10 @@ jobs:
         run: Rscript -e 'pak::local_system_requirements(execute = TRUE)'
 
       # local_install_deps should avoid installing DirichletMultinomial --> TFBSTools which is in Suggests field in DESCRIPTION
+      # switching back to dev_deps so that knitr will be installed for building vignette
       - name: Install dependencies
         run: |
-          pak::local_install_deps(upgrade = TRUE)
+          pak::local_install_dev_deps(upgrade = TRUE)
           pak::pkg_install("rcmdcheck")
         shell: Rscript {0}
 
