--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,9 @@ importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
+importFrom(stats,median)
 importFrom(tibble,add_column)
+importFrom(utils,tail)
