addressed check warnings/notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ import(ggseqlogo)
 importFrom(Biostrings,DNAStringSet)
 importFrom(Biostrings,width)
 importFrom(Matrix,Matrix)
+importFrom(cluster,silhouette)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
