add fpc to depends and importFrom for calinhara

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(Biostrings,DNAStringSet)
 importFrom(Biostrings,width)
 importFrom(Matrix,Matrix)
 importFrom(cluster,silhouette)
+importFrom(fpc,calinhara)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
