--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(get_seqs_clusters_in_a_list)
 export(handle_dir_creation)
 export(make_dinuc_PWMs)
 export(make_sinuc_PWMs)
-export(plot_arch_for_clusters_new)
+export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
 export(plot_ggseqlogo_of_seqs)
