@importFrom for dev.off

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(Biostrings,width)
 importFrom(Matrix,Matrix)
 importFrom(cluster,silhouette)
 importFrom(fpc,calinhara)
+importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
 importFrom(graphics,axis)
