--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,19 +5,20 @@ Version: 0.1.3
 Authors@R: 
     person(given = "Sarvesh",
            family = "Nikumbh",
-           role = c("aut", "cre"),
+           role = c("aut", "cre", "cph"),
            email = "sarvesh.nikumbh@gmail.com",
-           comment = c(ORCID = "0000-0003-3163-4447"))
+           comment = c(ORCID = "0000-0003-3163-4447", Twitter = "@sarveshnikumbh"))
 Description: Given a set of DNA sequences,\code{archR} enables 
     unsupervised discovery of clusters with characteristic sequence 
     architectures. \code{archR} is an iterative algorithm with non-negative
     matrix factorization (NMF) as its backbone.
 License: GPL-3
-URL: https://github.com/snikumbh/archR
+URL: https://snikumbh.github.io/archR/,
+    https://github.com/snikumbh/archR
 BugReports: https://github.com/snikumbh/archR/issues
 SystemRequirements: Python (>= 3.5), scikit-learn (>= 0.21.2)
 Depends:
-    R (>= 3.6)
+    R (>= 3.6.0)
 Imports:
     cvTools (>= 0.3.2),
     dplyr (>= 0.8.0.1),
