--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,19 @@ Authors@R:
            email = "sarvesh.nikumbh@gmail.com",
            comment = c(ORCID = "0000-0003-3163-4447", 
            Twitter = "@sarveshnikumbh"))
-Description: \code{archR} enables unsupervised discovery of _de novo_ clusters 
-    of DNA sequences with characteristic sequence architectures. archR does 
-    _not_ require any specifications w.r.t. the length of any individual motifs,
-    or the distance between any motifs occurring in pairs/groups; it 
-    directly infers them from the data. \code{archR} uses non-negative matrix 
-    factorization (NMF) as its backbone, and employs a chunking-based 
-    iterative procedure that enables processing of large sequence collections 
-    efficiently. 
+Description: Given a set of DNA sequences, \code{archR} enables unsupervised 
+    discovery of _de novo_ clusters with characteristic sequence architectures 
+    characterized by position-specific motifs or composition of stretches of 
+    nucleotides, e.g., CG-richness. \code{archR} does _not_ require any 
+    specifications w.r.t. the number of clusters, the length of any individual 
+    motifs, or the distance between motifs if and when they occur in 
+    pairs/groups; it directly detects them from the data. \code{archR} uses 
+    non-negative matrix factorization (NMF) as its backbone, and employs a 
+    chunking-based iterative procedure that enables processing of large 
+    sequence collections efficiently. Wrapper functions are provided for 
+    visualizing cluster architectures as sequence logos. Furthermore, a shiny 
+    application is provided to enable using \code{archR} via an easy-to-use 
+    user interface.
 License: GPL-3
 URL: https://snikumbh.github.io/archR/,
     https://github.com/snikumbh/archR
@@ -28,12 +33,9 @@ Imports:
     utils,
     graphics,
     cvTools (>= 0.3.2),
-    ggplot2 (>= 3.1.1),
-    ggseqlogo (>= 0.1),
     MASS,
     NMF,
     Matrix,
-    grDevices,
     methods,
     stats,
     cluster,
@@ -41,7 +43,10 @@ Imports:
     reshape2 (>= 1.4.3),
     reticulate (>= 1.12),
     parallel,
-    Biostrings
+    Biostrings,
+    grDevices,
+    ggplot2 (>= 3.1.1),
+    ggseqlogo (>= 0.1)
 Suggests:
     TFBSTools,
     ggpubr (>= 0.2.3),
