--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Description: Given a set of DNA sequences, \code{archR} enables unsupervised
     visualizing cluster architectures as sequence logos. Furthermore, a Shiny 
     application is provided to enable using \code{archR} via an easy-to-use 
     user interface.
-License: GPL-3
+License: GPL-3 | file LICENSE
 URL: https://snikumbh.github.io/archR/,
     https://github.com/snikumbh/archR
 BugReports: https://github.com/snikumbh/archR/issues
