man pgs/documentation updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(plot_ggseqlogo)
 export(plot_ggseqlogo_of_seqs)
 export(prepare_data_from_FASTA)
 export(run_archR_UI)
+export(seqs_str)
 export(viz_basis_vectors_as_heatmap)
 export(viz_basis_vectors_as_seqlogo)
 export(viz_basis_vectors_in_combined_heatmaps_seqlogos)
