get funcs added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 export(archR)
 export(archR_set_config)
 export(collate_archR_result)
+export(get_clBasVec)
+export(get_clBasVec_k)
+export(get_clBasVec_m)
 export(get_one_hot_encoded_seqs)
+export(get_seqClLab)
 export(get_seqs_clust_list)
 export(handle_dir_creation)
 export(make_dinuc_PWMs)
