updates to man pages/examples and minor changes to few funcs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(get_one_hot_encoded_seqs)
 export(get_seqClLab)
 export(get_seqs_clust_list)
 export(handle_dir_creation)
+export(make_dinuc_PWMs)
+export(make_sinuc_PWMs)
 export(plot_arch_for_clusters)
 export(plot_ggheatmap)
 export(plot_ggseqlogo)
@@ -17,10 +19,10 @@ export(plot_ggseqlogo_of_seqs)
 export(prepare_data_from_FASTA)
 export(run_archR_UI)
 export(seqs_str)
-export(viz_basis_vectors_as_heatmap)
-export(viz_basis_vectors_as_seqlogo)
-export(viz_basis_vectors_in_combined_heatmaps_seqlogos)
-export(viz_seqs_as_acgt_mat_from_seqs)
+export(viz_bas_vec_heatmap)
+export(viz_bas_vec_heatmap_seqlogo)
+export(viz_bas_vec_seqlogo)
+export(viz_seqs_acgt_mat_from_seqs)
 import(ggplot2)
 import(ggseqlogo)
 importFrom(Biostrings,DNAStringSet)
