--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,7 @@ Imports:
     ggseqlogo (>= 0.1)
 Suggests:
     TFBSTools,
-    ggpubr (>= 0.2.3),
+    cowplot,
     hopach (>= 2.42.0),
     shiny,
     shinyjs,
