--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -61,12 +61,12 @@ reference:
   contents:
     - plot_arch_for_clusters
     - plot_ggseqlogo_of_seqs
-    - viz_basis_vectors_as_heatmap
+    - viz_bas_vec_heatmap
     - plot_ggheatmap
-    - viz_basis_vectors_as_seqlogo
+    - viz_bas_vec_seqlogo
     - plot_ggseqlogo
-    - viz_basis_vectors_in_combined_heatmaps_seqlogos
-    - viz_seqs_as_acgt_mat_from_seqs
+    - viz_bas_vec_heatmap_seqlogo
+    - viz_seqs_acgt_mat_from_seqs
     
 - title: Manipulate archR result
   desc: Functions to manipulate elements from archR result
