updates to pass check/tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,4 +40,5 @@ importFrom(parallel,stopCluster)
 importFrom(reshape2,melt)
 importFrom(stats,dist)
 importFrom(stats,hclust)
+importFrom(utils,capture.output)
 importFrom(utils,tail)
