--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: archR
 Title: Identify Different Architectures of Sequence Elements
-Version: 0.1.6
+Version: 0.1.7
 Authors@R: 
     person(given = "Sarvesh",
            family = "Nikumbh",
@@ -9,19 +9,17 @@ Authors@R:
            email = "sarvesh.nikumbh@gmail.com",
            comment = c(ORCID = "0000-0003-3163-4447", 
            Twitter = "@sarveshnikumbh"))
-Description: Given a set of DNA sequences, \code{archR} enables unsupervised 
-    discovery of _de novo_ clusters with characteristic sequence architectures 
-    characterized by position-specific motifs or composition of stretches of 
-    nucleotides, e.g., CG-richness. \code{archR} does _not_ require any 
-    specifications w.r.t. the number of clusters, the length of any individual 
-    motifs, or the distance between motifs if and when they occur in 
-    pairs/groups; it directly detects them from the data. \code{archR} uses 
-    non-negative matrix factorization (NMF) as its backbone, and employs a 
-    chunking-based iterative procedure that enables processing of large 
-    sequence collections efficiently. Wrapper functions are provided for 
-    visualizing cluster architectures as sequence logos. Furthermore, a Shiny 
-    application is provided to enable using \code{archR} via an easy-to-use 
-    user interface.
+Description: \code{archR} enables unsupervised discovery of _de novo_ clusters 
+    with characteristic sequence architectures characterized by 
+    position-specific motifs or composition of stretches of nucleotides, 
+    e.g., CG-richness. \code{archR} does _not_ require any specifications 
+    w.r.t. the number of clusters, the length of any individual motifs, or 
+    the distance between motifs if and when they occur in pairs/groups; it 
+    directly detects them from the data. \code{archR} uses non-negative 
+    matrix factorization (NMF) as its backbone, and employs a chunking-based 
+    iterative procedure that enables processing of large sequence collections 
+    efficiently. Wrapper functions are provided for visualizing cluster 
+    architectures as sequence logos.
 License: GPL-3 | file LICENSE
 URL: https://snikumbh.github.io/archR/,
     https://github.com/snikumbh/archR
