cli, prettyunits added to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(viz_bas_vec_heatmap)
 export(viz_bas_vec_heatmap_seqlogo)
 export(viz_bas_vec_seqlogo)
 export(viz_seqs_acgt_mat_from_seqs)
+import(cli)
 import(ggplot2)
 import(ggseqlogo)
 importFrom(Biostrings,DNAStringSet)
@@ -38,6 +39,7 @@ importFrom(methods,is)
 importFrom(parallel,makeCluster)
 importFrom(parallel,setDefaultCluster)
 importFrom(parallel,stopCluster)
+importFrom(prettyunits,pretty_dt)
 importFrom(reshape2,melt)
 importFrom(stats,dist)
 importFrom(stats,hclust)
