--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     matrixStats,
     fpc,
     cli,
+    prettyunits,
     reshape2 (>= 1.4.3),
     reticulate (>= 1.12),
     parallel,
